--- a/MyProject/src/index.html
+++ b/MyProject/src/index.html
@@ -179,7 +179,7 @@
         </div>
         <div class="container">
         <div class="row justify-content-center">
-        <div class="col-3 px-2">
+        <div class="col-xxl-3 col-md-12 px-2">
         <div class="cl">
     <h3>CLIENT:</h3>
     <h4>Какая-то компания</h4>
@@ -188,7 +188,7 @@
     <br><input type="submit"value="ПЕРЕЙТИ НА САЙТ">
     </div>
      </div>
-        <div class="col-7">
+        <div class="col-xxl-7 col-md-12">
     <div class="naz">
     <h3>Название проекта</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas rem necessitatibus aperiam, quasi ad officiis, repellat illo eaque vero velit laboriosam deserunt. Accusamus quam eum, veritatis vel nostrum, fugiat, corporis eos nemo explicabo minima in temporibus sequi provident a officia!</p>
@@ -257,12 +257,18 @@
     </div>
     </div>
     </div>
-    <div class="row justify-content-center">
-    <div class="col-xxl-8 col-xl-12 text-center">
     <div class="bloc">
+    <div class="row justify-content-center">
+    <div class="col-12 col-md-2 text-center">
     <h4><img src="img/smile.png"alt="картинка"><br>СЧАСТЛИВЫХ КЛИЕНТОВ</h4>
+        </div>
+        <div class="col-12 col-md-2 text-center">
     <h4><img src="img/skobki.png"alt="картинка"><br>ЧАСОВ РАБОТЫ</h4>
+        </div>
+    <div class="col-12 col-md-2 text-center">
     <h4><img src="img/galka.png"alt="картинка"><br>ПРОЕКТОВ ЗАВЕРШЕНО</h4>
+        </div>
+        <div class="col-12 col-md-2 text-center">
     <h4><img src="img/kubok.png"alt="картинка"><br>НАГРАД ПОЛУЧЕНО</h4>
     </div>
     </div>
@@ -274,19 +280,19 @@
     <div class="otz">
     <div class="container">
     <div class="row justify-content-center">
-    <div class="col-2 text-center">
+    <div class="col-xxl-2 col-xl-3 text-center">
     <h2>ОТЗЫВЫ</h2>      
     </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-1 px-3">
+        <div class="col-xxl-1 col-md-2 text-center ">
             <div class="cherta_5">
     <img src="img/chertazagolovka.png">
     </div>
     </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-1 px-2">
+        <div class="col-xxl-1 text-center">
     <div class="photo2">
     <img src="img/photo2.png"alt="аватарка">
     </div>
@@ -316,7 +322,7 @@
         </div>
         
          <div class="row justify-content-center">
-      <div class="col-2 text-center">
+      <div class="col-xxl-2 col-md-3 text-center">
       <div class="cherta_4">
       <img src="img/chertazagolovka.png">
       </div>
@@ -329,13 +335,13 @@
         </div>
           <div class="blok">
            <div class="row justify-content-center">
-        <div class="col-2 text-center"> 
+        <div class="col-xxl-2 col-md-12 text-center"> 
         <h4><img src="img/geo.png"alt="картинка"><br>Санкт-Петербург<br>Невский проспект 11</h4>
         </div>   
-         <div class="col-2 text-center">
+         <div class="col-xxl-2 col-md-12 text-center">
         <h4><img src="img/email.png"alt="картинка"><br>lerap6563@gmail.com</h4>
         </div>
-             <div class="col-2 text-center">                       
+             <div class="col-xxl-2 col-md-12 text-center">                   
         <h4><img src="img/phone.png"alt="картинка"><br>+7-952-170-22-64</h4> 
         </div>   
         </div> 
