--- a/MyProject/src/index.html
+++ b/MyProject/src/index.html
@@ -243,8 +243,8 @@
      </div>
     
     <div class="statistica">
-    <div class="conteiner-fluid const">
-    <div class="conteiner">
+    <div class="container-fluid const">
+    <div class="container">
     <div class="row justify-content-center">
         <div class="col-xxl-4 col-xl-5 text-center">
         <h2>НЕМНОГО СТАТИСТИКИ</h2>    
@@ -259,16 +259,16 @@
     </div>
     <div class="bloc">
     <div class="row justify-content-center">
-    <div class="col-12 col-md-2 text-center">
+    <div class="col-12 col-md-3 text-center">
     <h4><img src="img/smile.png"alt="картинка"><br>СЧАСТЛИВЫХ КЛИЕНТОВ</h4>
         </div>
-        <div class="col-12 col-md-2 text-center">
+        <div class="col-12 col-md-3 text-center">
     <h4><img src="img/skobki.png"alt="картинка"><br>ЧАСОВ РАБОТЫ</h4>
         </div>
-    <div class="col-12 col-md-2 text-center">
+    <div class="col-12 col-md-3 text-center">
     <h4><img src="img/galka.png"alt="картинка"><br>ПРОЕКТОВ ЗАВЕРШЕНО</h4>
         </div>
-        <div class="col-12 col-md-2 text-center">
+        <div class="col-12 col-md-3 text-center">
     <h4><img src="img/kubok.png"alt="картинка"><br>НАГРАД ПОЛУЧЕНО</h4>
     </div>
     </div>
@@ -335,10 +335,10 @@
         </div>
           <div class="blok">
            <div class="row justify-content-center">
-        <div class="col-xxl-2 col-md-12 text-center"> 
+        <div class="col-xxl-2 col-md-12 text-center "> 
         <h4><img src="img/geo.png"alt="картинка"><br>Санкт-Петербург<br>Невский проспект 11</h4>
         </div>   
-         <div class="col-xxl-2 col-md-12 text-center">
+         <div class="col-xxl-2 col-md-12 text-center px-4">
         <h4><img src="img/email.png"alt="картинка"><br>lerap6563@gmail.com</h4>
         </div>
              <div class="col-xxl-2 col-md-12 text-center">                   
@@ -354,7 +354,7 @@
         <form action="#">
         <div class="vvod">
         <div class="row justify-content-center">
-            <div class="col-4">
+            <div class="col-4 ">
              <input type="text"value="" autocomplete="on" required placeholder="Имя">      
             </div>
      <div class="col-4">
@@ -382,5 +382,6 @@
         </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/myScript.js"></script>
 </body>
 </html>
